<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>be.coekaerts.wouter.puzzles</groupId>
    <artifactId>puzzles</artifactId>
    <packaging>pom</packaging>
    <version>1-SNAPSHOT</version>
    <name>puzzles</name>
    <url>http://wouter.coekaerts.be/puzzles/</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Skip execution for this parent module. This is overridden in sub-modules -->
        <exec.skip>true</exec.skip>
        <exec.main>skipped</exec.main>
    </properties>

    <modules>
        <module>clowns</module>
        <module>dreams</module>
        <module>car</module>
    </modules>

    <build>
        <!-- We have no tests, and only java, so let's skip the whole src/main/java dance -->
        <sourceDirectory>src</sourceDirectory>

        <plugins>
            <!-- Using at least Java 5 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.5</source>
                    <target>1.5</target>
                </configuration>
            </plugin>

            <!-- Execute the main class with a security manager enabled, in test phase -->
            <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>1.2.1</version>
            <executions>
                <execution>
                    <phase>test</phase>
                    <goals>
                        <goal>exec</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <skip>${exec.skip}</skip>
                <executable>java</executable>
                <arguments>
                    <argument>-cp</argument>
                    <classpath/>
                    <argument>-Djava.security.manager</argument>
                    <argument>${exec.main}</argument>
                </arguments>
            </configuration>
            </plugin>
        </plugins>
    </build>

</project>
